# ibkr_order_panel_rust

./: Cargo.toml  watchlist.toml
src/: connector.rs  main.rs  router.rs
